--- a/logstash/supervisord.conf
+++ b/logstash/supervisord.conf
@@ -1,8 +1,7 @@
 ; Copyright (c) 2020 Battelle Energy Alliance, LLC.  All rights reserved.
 
-[unix_http_server]
-file=/var/run/supervisor.sock   ; (the path to the socket file)
-chmod=0700
+[inet_http_server]
+port=0.0.0.0:9001
 
 [supervisord]
 nodaemon=true
@@ -14,7 +13,7 @@ childlogdir=/var/log/supervisor
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///var/run/supervisor.sock
+serverurl=http://127.0.0.1:9001
 
 [program:logstash]
 command=/usr/local/bin/logstash-start.sh
@@ -22,8 +21,10 @@ user=logstash
 autostart=true
 startsecs=0
 startretries=0
+stopwaitsecs=60
 stopasgroup=true
 killasgroup=true
+stopsignal=INT
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
