--- a/name-map-ui/config/supervisord.conf
+++ b/name-map-ui/config/supervisord.conf
@@ -1,10 +1,20 @@
 ; Copyright (c) 2020 Battelle Energy Alliance, LLC.  All rights reserved.
 
+[unix_http_server]
+file=/tmp/supervisor.sock   ; (the path to the socket file)
+chmod=0700
+
 [supervisord]
 nodaemon=true
 logfile=/dev/null
 logfile_maxbytes=0
 pidfile=/run/supervisord.pid
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock
 
 [program:php-fpm]
 command=php-fpm7 -F
