add ability to save net-map.json from web ui

--- a/name-map-ui/config/supervisord.conf
+++ b/name-map-ui/config/supervisord.conf
@@ -35,3 +35,14 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 autorestart=false
 startretries=0
+
+[program:watch-upload]
+command=/bin/bash -c "sleep 15 && /usr/local/bin/name-map-save-watch.sh"
+startsecs=20
+startretries=1
+stopasgroup=true
+killasgroup=true
+directory=/var/www/html/upload
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
