basic control for restarting logstash via ui controls

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -182,6 +182,7 @@ http {
       proxy_pass http://docker-name-map-ui/;
       proxy_redirect off;
       proxy_set_header Host name-map-ui.malcolm.local;
+      proxy_cache off;
     }
 
     location = /favicon.ico {
