--- a/name-map-ui/config/nginx.conf
+++ b/name-map-ui/config/nginx.conf
@@ -44,6 +44,11 @@ http {
             try_files $uri $uri/ /index.php?q=$uri&$args;
         }
 
+        location ~* maps/.+\.(txt|json)$ {
+          expires -1;
+          add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+        }
+
         # Redirect server error pages to the static page /50x.html
         error_page 500 502 503 504 /50x.html;
         location = /50x.html {
