update elasticsearch to 7.6.2; also, fix issue #119

--- a/kibana/kibana-standard.yml
+++ b/kibana/kibana-standard.yml
@@ -8,6 +8,6 @@ server.rewriteBasePath: true
 elasticsearch.hosts: ["${ELASTICSEARCH_URL}"]
 elasticsearch.requestTimeout: 180000
 kibana.defaultAppId: "dashboard/${KIBANA_DEFAULT_DASHBOARD}"
-# elastalert-kibana-plugin.serverHost: elastalert
-# elastalert-kibana-plugin.serverPort: 3030
+elastalert-kibana-plugin.serverHost: elastalert
+elastalert-kibana-plugin.serverPort: 3030
 
