add user to vboxsf group for using shared folders

--- a/malcolm-iso/config/includes.chroot/etc/live/config.conf
+++ b/malcolm-iso/config/includes.chroot/etc/live/config.conf
@@ -2,5 +2,5 @@ LIVE_LOCALES="en_US.UTF-8"
 LIVE_HOSTNAME="malcolm-live"
 LIVE_USERNAME="analyst"
 LIVE_USER_FULLNAME="Malcolm Live Analyst"
-LIVE_USER_DEFAULT_GROUPS="adm audio cdrom disk docker netdev plugdev sudo video"
+LIVE_USER_DEFAULT_GROUPS="adm audio cdrom disk docker netdev plugdev sudo video vboxsf"
 
