--- a/malcolm-iso/config/includes.binary/install/preseed_base.cfg
+++ b/malcolm-iso/config/includes.binary/install/preseed_base.cfg
@@ -18,7 +18,7 @@ d-i localepurge/remove_no note
 
 # d-i passwd/username string analyst
 # d-i passwd/user-fullname string analyst
-d-i passwd/user-default-groups string audio cdrom video netdev plugdev docker
+d-i passwd/user-default-groups string audio cdrom video netdev plugdev docker vboxsf
 d-i passwd/root-login boolean true
 
 # crypted passwords via: mkpasswd -m sha-512 -S $(pwgen -ns 16 1) <password>
