--- a/sensor-iso/config/includes.binary/install/preseed_base.cfg
+++ b/sensor-iso/config/includes.binary/install/preseed_base.cfg
@@ -19,7 +19,7 @@ d-i clock-setup/ntp-server string 0.debian.pool.ntp.org
 
 d-i passwd/username string sensor
 d-i passwd/user-fullname string sensor
-d-i passwd/user-default-groups string audio cdrom video netdev plugdev
+d-i passwd/user-default-groups string audio cdrom video netdev plugdev vboxsf
 d-i passwd/root-login boolean true
 
 # crypted passwords via: mkpasswd -m sha-512 -S $(pwgen -ns 16 1) <password>
