--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -117,15 +117,15 @@ services:
         hard: -1
     cap_add:
       - IPC_LOCK
-    healthcheck:
-        test: ["CMD", "curl", "--silent", "--fail", "http://localhost:9200"]
-        interval: 30s
-        timeout: 15s
-        retries: 3
-        start_period: 180s
     volumes:
       - ./elasticsearch:/usr/share/elasticsearch/data:delegated
       - ./elasticsearch-backup:/opt/elasticsearch/backup:delegated
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:9200"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 180s
   kibana:
     image: malcolmnetsec/kibana-oss:2.0.0
     restart: "no"
@@ -144,11 +144,11 @@ services:
       - 5601
       - 28991
     healthcheck:
-        test: ["CMD", "curl", "--silent", "--fail", "http://localhost:5601/kibana/api/status"]
-        interval: 30s
-        timeout: 15s
-        retries: 3
-        start_period: 200s
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:5601/kibana/api/status"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 210s
   elastalert:
     image: malcolmnetsec/elastalert:2.0.0
     restart: "no"
@@ -163,17 +163,17 @@ services:
     expose:
       - 3030
       - 3333
-    healthcheck:
-        test: ["CMD", "curl", "--silent", "--fail", "http://localhost:3030"]
-        interval: 30s
-        timeout: 15s
-        retries: 3
-        start_period: 200s
     volumes:
       - ./elastalert/config/elastalert.yaml:/opt/elastalert/config.yaml
       - ./elastalert/config/smtp-auth.yaml:/opt/elastalert/smtp-auth.yaml:ro
       - ./elastalert/config/config.json:/opt/elastalert-server/config/config.json
       - ./elastalert/rules/:/opt/elastalert/rules/
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:3030"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 210s
   curator:
     image: malcolmnetsec/curator:2.0.0
     restart: "no"
@@ -184,6 +184,12 @@ services:
       ES_PORT : 9200
     depends_on:
       - elasticsearch
+    healthcheck:
+      test: ["CMD", "pidof", "cron"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
   logstash:
     image: malcolmnetsec/logstash-oss:2.0.0
     restart: "no"
@@ -200,12 +206,6 @@ services:
       - 5044
       - 9001
       - 9600
-    healthcheck:
-        test: ["CMD", "curl", "--silent", "--fail", "http://localhost:9600"]
-        interval: 30s
-        timeout: 15s
-        retries: 3
-        start_period: 600s
     volumes:
       # - ./logstash/certs/logstash.keystore:/usr/share/logstash/config/logstash.keystore:ro
       - ./logstash/certs/ca.crt:/certs/ca.crt:ro
@@ -214,6 +214,12 @@ services:
       - ./cidr-map.txt:/usr/share/logstash/config/cidr-map.txt:ro
       - ./host-map.txt:/usr/share/logstash/config/host-map.txt:ro
       - ./net-map.json:/usr/share/logstash/config/net-map.json:ro
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:9600"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 600s
   filebeat:
     image: malcolmnetsec/filebeat-oss:2.0.0
     restart: "no"
@@ -242,6 +248,12 @@ services:
       - ./filebeat/certs/ca.crt:/certs/ca.crt:ro
       - ./filebeat/certs/client.crt:/certs/client.crt:ro
       - ./filebeat/certs/client.key:/certs/client.key:ro
+    healthcheck:
+      test: ["CMD", "supervisorctl", "status", "filebeat"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   moloch:
     image: malcolmnetsec/moloch:2.0.0
     restart: "no"
@@ -264,12 +276,6 @@ services:
         hard: -1
     depends_on:
       - elasticsearch
-    healthcheck:
-        test: ["CMD", "curl", "--silent", "--fail", "http://localhost:8005/_ns_/nstest.html"]
-        interval: 90s
-        timeout: 30s
-        retries: 3
-        start_period: 180s
     expose:
       - 8000
       - 8005
@@ -278,6 +284,12 @@ services:
       - ./pcap:/data/pcap
       - ./moloch-logs:/data/moloch/logs
       - ./moloch-raw:/data/moloch/raw
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:8005/_ns_/nstest.html"]
+      interval: 90s
+      timeout: 30s
+      retries: 3
+      start_period: 210s
   zeek:
     image: malcolmnetsec/zeek:2.0.0
     restart: "no"
@@ -295,6 +307,12 @@ services:
       - ./pcap:/pcap
       - ./zeek-logs/upload:/zeek/upload
       - ./zeek-logs/extract_files:/zeek/extract_files
+    healthcheck:
+      test: ["CMD", "supervisorctl", "status", "pcap-zeek"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   file-monitor:
     image: malcolmnetsec/file-monitor:2.0.0
     restart: "no"
@@ -306,6 +324,12 @@ services:
     volumes:
       - ./zeek-logs/extract_files:/data/zeek/extract_files
       - ./zeek-logs/current:/data/zeek/logs
+    healthcheck:
+      test: ["CMD", "supervisorctl", "status", "watcher", "scanner", "logger"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   pcap-capture:
     image: malcolmnetsec/pcap-capture:2.0.0
     restart: "no"
@@ -323,6 +347,12 @@ services:
       << : *pcap-capture-variables
     volumes:
       - ./pcap/upload:/pcap
+    healthcheck:
+      test: ["CMD", "supervisorctl", "status"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   pcap-monitor:
     image: malcolmnetsec/pcap-monitor:2.0.0
     restart: "no"
@@ -337,6 +367,12 @@ services:
     volumes:
       - ./zeek-logs:/zeek
       - ./pcap:/pcap
+    healthcheck:
+      test: ["CMD", "supervisorctl", "status", "watch-upload", "pcap-publisher"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 90s
   upload:
     image: malcolmnetsec/file-upload:2.0.0
     restart: "no"
@@ -354,6 +390,12 @@ services:
       - 127.0.0.1:8022:22
     volumes:
       - ./pcap/upload:/var/www/upload/server/php/chroot/files
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   htadmin:
     image: malcolmnetsec/htadmin:2.0.0
     restart: "no"
@@ -367,6 +409,12 @@ services:
       - ./htadmin/config.ini:/var/www/htadmin/config/config.ini:rw
       - ./htadmin/metadata:/var/www/htadmin/config/metadata:rw
       - ./nginx/htpasswd:/var/www/htadmin/config/htpasswd:rw
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   freq:
     image: malcolmnetsec/freq:2.0.0
     restart: "no"
@@ -376,6 +424,12 @@ services:
       VIRTUAL_HOST : 'freq.malcolm.local'
     expose:
       - 10004
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:10004"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   name-map-ui:
     image: malcolmnetsec/name-map-ui:2.0.0
     restart: "no"
@@ -384,16 +438,16 @@ services:
       VIRTUAL_HOST : 'name-map-ui.malcolm.local'
     expose:
       - 8080
-    healthcheck:
-        test: ["CMD", "curl", "--silent", "--fail", "http://localhost:8080/fpm-ping"]
-        interval: 60s
-        timeout: 15s
-        retries: 3
-        start_period: 90s
     volumes:
       - ./cidr-map.txt:/var/www/html/maps/cidr-map.txt:ro
       - ./host-map.txt:/var/www/html/maps/host-map.txt:ro
       - ./net-map.json:/var/www/html/maps/net-map.json:rw
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:8080/fpm-ping"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   nginx-proxy:
     image: malcolmnetsec/nginx-proxy:2.0.0
     restart: "no"
@@ -421,6 +475,12 @@ services:
       - ./nginx/htpasswd:/etc/nginx/.htpasswd:ro
       - ./nginx/certs:/etc/nginx/certs:ro
       - ./nginx/certs/dhparam.pem:/etc/nginx/dhparam/dhparam.pem:ro
+    healthcheck:
+      test: ["CMD", "curl", "--insecure", "--silent", "https://localhost:443"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 120s
 
 # shared named volume so filebeat can access nginx access logs
 volumes:
