--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,15 +117,15 @@ services:
         hard: -1
     cap_add:
       - IPC_LOCK
-    healthcheck:
-        test: ["CMD", "curl", "--silent", "--fail", "http://localhost:9200"]
-        interval: 30s
-        timeout: 15s
-        retries: 3
-        start_period: 180s
     volumes:
       - ./elasticsearch:/usr/share/elasticsearch/data:delegated
       - ./elasticsearch-backup:/opt/elasticsearch/backup:delegated
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:9200"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 180s
   kibana:
     build:
       context: .
@@ -147,11 +147,11 @@ services:
       - 5601
       - 28991
     healthcheck:
-        test: ["CMD", "curl", "--silent", "--fail", "http://localhost:5601/kibana/api/status"]
-        interval: 30s
-        timeout: 15s
-        retries: 3
-        start_period: 200s
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:5601/kibana/api/status"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 210s
   elastalert:
     build:
       context: .
@@ -169,17 +169,17 @@ services:
     expose:
       - 3030
       - 3333
-    healthcheck:
-        test: ["CMD", "curl", "--silent", "--fail", "http://localhost:3030"]
-        interval: 30s
-        timeout: 15s
-        retries: 3
-        start_period: 200s
     volumes:
       - ./elastalert/config/elastalert.yaml:/opt/elastalert/config.yaml
       - ./elastalert/config/smtp-auth.yaml:/opt/elastalert/smtp-auth.yaml:ro
       - ./elastalert/config/config.json:/opt/elastalert-server/config/config.json
       - ./elastalert/rules/:/opt/elastalert/rules/
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:3030"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 210s
   curator:
     build:
       context: .
@@ -195,6 +195,12 @@ services:
       - elasticsearch
     volumes:
       - ./curator/config/action_file.yml:/config/action_file.yml
+    healthcheck:
+      test: ["CMD", "pidof", "cron"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
   logstash:
     build:
       context: .
@@ -214,12 +220,6 @@ services:
       - 5044
       - 9001
       - 9600
-    healthcheck:
-        test: ["CMD", "curl", "--silent", "--fail", "http://localhost:9600"]
-        interval: 30s
-        timeout: 15s
-        retries: 3
-        start_period: 600s
     volumes:
       - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
       - ./logstash/pipelines:/usr/share/logstash/malcolm-pipelines.available:ro
@@ -230,6 +230,12 @@ services:
       - ./cidr-map.txt:/usr/share/logstash/config/cidr-map.txt:ro
       - ./host-map.txt:/usr/share/logstash/config/host-map.txt:ro
       - ./net-map.json:/usr/share/logstash/config/net-map.json:ro
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:9600"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 600s
   filebeat:
     build:
       context: .
@@ -262,6 +268,12 @@ services:
       - ./filebeat/certs/client.crt:/certs/client.crt:ro
       - ./filebeat/certs/client.key:/certs/client.key:ro
       - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+    healthcheck:
+      test: ["CMD", "supervisorctl", "status", "filebeat"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   moloch:
     build:
       context: .
@@ -287,12 +299,6 @@ services:
         hard: -1
     depends_on:
       - elasticsearch
-    healthcheck:
-        test: ["CMD", "curl", "--silent", "--fail", "http://localhost:8005/_ns_/nstest.html"]
-        interval: 90s
-        timeout: 30s
-        retries: 3
-        start_period: 180s
     expose:
       - 8000
       - 8005
@@ -304,6 +310,12 @@ services:
       - ./moloch/etc/config.ini:/data/moloch/etc/config.ini:ro
       - ./moloch/etc/user_settings.json:/data/moloch/etc/user_settings.json:ro
       - ./moloch/wise/source.zeeklogs.js:/data/moloch/wiseService/source.zeeklogs.js:ro
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:8005/_ns_/nstest.html"]
+      interval: 90s
+      timeout: 30s
+      retries: 3
+      start_period: 210s
   zeek:
     build:
       context: .
@@ -325,6 +337,12 @@ services:
       - ./zeek-logs/upload:/zeek/upload
       - ./zeek-logs/extract_files:/zeek/extract_files
       - ./zeek/config/local.zeek:/opt/zeek/share/zeek/site/local.zeek:ro
+    healthcheck:
+      test: ["CMD", "supervisorctl", "status", "pcap-zeek"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   file-monitor:
     build:
       context: .
@@ -339,6 +357,12 @@ services:
     volumes:
       - ./zeek-logs/extract_files:/data/zeek/extract_files
       - ./zeek-logs/current:/data/zeek/logs
+    healthcheck:
+      test: ["CMD", "supervisorctl", "status", "watcher", "scanner", "logger"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   pcap-capture:
     build:
       context: .
@@ -359,6 +383,12 @@ services:
       << : *pcap-capture-variables
     volumes:
       - ./pcap/upload:/pcap
+    healthcheck:
+      test: ["CMD", "supervisorctl", "status"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   pcap-monitor:
     build:
       context: .
@@ -376,6 +406,12 @@ services:
     volumes:
       - ./zeek-logs:/zeek
       - ./pcap:/pcap
+    healthcheck:
+      test: ["CMD", "supervisorctl", "status", "watch-upload", "pcap-publisher"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 90s
   upload:
     build:
       context: .
@@ -396,6 +432,12 @@ services:
       - 127.0.0.1:8022:22
     volumes:
       - ./pcap/upload:/var/www/upload/server/php/chroot/files
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   htadmin:
     image: malcolmnetsec/htadmin:2.0.0
     build:
@@ -412,6 +454,12 @@ services:
       - ./htadmin/config.ini:/var/www/htadmin/config/config.ini:rw
       - ./htadmin/metadata:/var/www/htadmin/config/metadata:rw
       - ./nginx/htpasswd:/var/www/htadmin/config/htpasswd:rw
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   freq:
     image: malcolmnetsec/freq:2.0.0
     build:
@@ -424,6 +472,12 @@ services:
       VIRTUAL_HOST : 'freq.malcolm.local'
     expose:
       - 10004
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:10004"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   name-map-ui:
     image: malcolmnetsec/name-map-ui:2.0.0
     build:
@@ -435,16 +489,16 @@ services:
       VIRTUAL_HOST : 'name-map-ui.malcolm.local'
     expose:
       - 8080
-    healthcheck:
-        test: ["CMD", "curl", "--silent", "--fail", "http://localhost:8080/fpm-ping"]
-        interval: 60s
-        timeout: 15s
-        retries: 3
-        start_period: 90s
     volumes:
       - ./cidr-map.txt:/var/www/html/maps/cidr-map.txt:ro
       - ./host-map.txt:/var/www/html/maps/host-map.txt:ro
       - ./net-map.json:/var/www/html/maps/net-map.json:rw
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost:8080/fpm-ping"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 60s
   nginx-proxy:
     build:
       context: .
@@ -476,6 +530,12 @@ services:
       - ./nginx/htpasswd:/etc/nginx/.htpasswd:ro
       - ./nginx/certs:/etc/nginx/certs:ro
       - ./nginx/certs/dhparam.pem:/etc/nginx/dhparam/dhparam.pem:ro
+    healthcheck:
+      test: ["CMD", "curl", "--insecure", "--silent", "https://localhost:443"]
+      interval: 30s
+      timeout: 15s
+      retries: 3
+      start_period: 120s
 
 # shared named volume so filebeat can access nginx access logs
 volumes:
