issue #120, detect telnet, rsh, and rlogin traffic with zeek
Squashed commit of the following:

commit fb5c31302b9a336b01cf32d4d5a69e6e5c84dff1
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Tue Apr 14 10:17:44 2020 -0600

    ensure local zeek policy gets set correctly

commit 7ca7add64ae4f4e31ef1174ffbf0882af89eaae1
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Tue Apr 14 10:01:11 2020 -0600

    more work on the telnet detection feature

commit d921cf962b0163d5249efbf900694449316e5d51
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Mon Apr 13 16:29:45 2020 -0600

    more work on the telnet detection feature

commit b643c442bea572b660d5717a079f0e6c2e76a941
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Mon Apr 13 08:03:45 2020 -0600

    include basic telnet detection in sensor iso

commit 5952a30d28ae8cf8433aba507c90c6a5789e5d02
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Mon Apr 13 07:14:19 2020 -0600

    bump version to 2.0.1 for development

commit ea06a8ae438b025dfc30590dc6ad402813a1468b
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Mon Apr 13 07:13:20 2020 -0600

    added telnet to list of insecure protocols

commit 3774c695b31f6907b56ef7bb69a36ebb0a3993dd
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Mon Apr 13 07:08:28 2020 -0600

    rudimentary detection of telnet protocol

commit 99a9710de17d49b7a530ff54c0c9e237a9b3a581
Merge: e95d736 18b98db
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Thu Apr 9 14:07:52 2020 -0600

    Merge remote-tracking branch 'upstream/development' into development

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1118,6 +1118,36 @@ filter {
       add_field =>  { "[zeek_cols][service]" => "ldap" }
     }
 
+  } else if ([source] == "login") {
+    #############################################################################################################################
+    # login.log
+    # custom login.log module (rudimentary, telnet/rlogin/rsh analyzers are old and not the greatest)
+
+    dissect {
+      id => "dissect_zeek_login"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][proto]}	%{[zeek_cols][success]}	%{[zeek_cols][confused]}	%{[zeek_cols][user]}	%{[zeek_cols][client_user]}	%{[zeek_cols][password]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_login"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_login"
+        init => "$zeek_login_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'proto', 'success', 'confused', 'user', 'client_user', 'password' ]"
+        code => "event.set('[zeek_cols]', $zeek_login_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    if ([zeek_cols][proto]) and ([zeek_cols][proto] != '-') and ([zeek_cols][proto] != '(empty)') and ([zeek_cols][proto] != '') {
+      mutate { id => "mutate_add_field_zeek_login_service"
+               add_field => { "[zeek_cols][service]" => "%{[zeek_cols][proto]}" } }
+    }
+
   } else if ([source] == "modbus") {
     #############################################################################################################################
     # modbus.log
