--- a/sensor-iso/moloch/Dockerfile
+++ b/sensor-iso/moloch/Dockerfile
@@ -12,7 +12,7 @@ ENV MOLOCHDIR "/opt/moloch"
 RUN sed -i "s/buster main/buster main contrib non-free/g" /etc/apt/sources.list && \
   apt-get -q update && \
   apt-get install -q -y --no-install-recommends \
-      curl iproute2 git python python-dev sudo ruby ruby-dev rubygems build-essential && \
+      curl iproute2 python python-dev sudo ruby ruby-dev rubygems build-essential && \
   gem install --no-ri --no-rdoc fpm && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
