--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2843,9 +2843,6 @@ filter {
     #############################################################################################################################
     # files.log specific logic
 
-    if ([zeek_files][parent_fuid]) { mutate { id => "mutate_split_zeek_files_parent_fuid"
-                                              split => { "[zeek_files][parent_fuid]" => "," } } }
-
     if ([zeek_files][total_bytes]) {
       ruby {
         id => "ruby_zeek_files_totBytes"
@@ -2859,8 +2856,24 @@ filter {
       }
     }
 
-    mutate { id => "mutate_split_zeek_files_analyzers"
-             split => { "[zeek_files][analyzers]" => "," } }
+    if ([zeek_files][parent_fuid]) { mutate { id => "mutate_split_zeek_files_parent_fuid"
+                                              split => { "[zeek_files][parent_fuid]" => "," } } }
+
+    if ([zeek_files][analyzers]) { mutate { id => "mutate_split_zeek_files_analyzers"
+                                            split => { "[zeek_files][analyzers]" => "," } } }
+
+    if ([zeek_files][source]) and ([zeek_files][source] =~ /^XOR decrypted from /) {
+      # PE_XOR plugin writes source as "XOR decrypted from FM7Tr545kxt3ofR7x2-"..., let's
+      # standardize that to just "XOR decrypted" and put the source fuid in parent_fuid
+      grok {
+        id => "grok_zeek_files_source_xor"
+        match => { "[zeek_files][source]" => [ "decrypted%{SPACE}from%{SPACE}%{WORD:[@metadata][source_xor_fuid]}" ] }
+      }
+      if ([@metadata][source_xor_fuid]) { mutate { id => "mutate_merge_zeek_files_source_xor_parent_fuid"
+                                                   merge => { "[zeek_files][parent_fuid]" => "[@metadata][source_xor_fuid]" } } }
+      mutate { id => "mutate_replace_zeek_files_source_xor"
+               replace => { "[zeek_files][source]" => "XOR decrypted" } }
+    }
 
   } else if ([source] == "ftp") {
     #############################################################################################################################
