make sure both original and decrypted FUID show up in notice log for pe_xor decrypted files

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3176,6 +3176,21 @@ filter {
       }
     }
 
+    if ([zeek_notice][note] == "Corelight::XOR_Encrypted_PE_File_Seen") and ([zeek_notice][sub] =~ /Decrypted File ID/) {
+      # zeek_notice.note  Corelight::XOR_Encrypted_PE_File_Seen
+      #
+      #         zeek.fuid   F7QoY740DvrZF2lrsa
+      # + zeek_notice.sub   Decrypted File ID: FqNQ8i3LbG2ZY5EO3k
+      # -----------------
+      # =       zeek.fuid   F7QoY740DvrZF2lrsa, FqNQ8i3LbG2ZY5EO3k
+      grok {
+        id => "grok_zeek_notice_xor_fuid"
+        match => { "[zeek_notice][sub]" => [ "Decrypted%{SPACE}File%{SPACE}ID:%{SPACE}%{WORD:[@metadata][decrypted_xor_fuid]}" ] }
+      }
+      if ([@metadata][decrypted_xor_fuid]) { mutate { id => "mutate_merge_zeek_notice_decrypted_xor_fuid"
+                                                      merge => { "[zeek][fuid]" => "[@metadata][decrypted_xor_fuid]" } } }
+    }
+
   } else if ([source] == "ntp") {
     #############################################################################################################################
     # ntp.log specific logic
