Squashed commit of the following:
commit 192e5c345536fc1a8c7f454b81ee645e9f5fea06
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Tue May 5 13:03:33 2020 -0600

    bump version to 2.0.3

commit 2c2de9fb4a93c738915d3bbc7ab8320570b81052
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Tue May 5 12:51:14 2020 -0600

    create ca-trust directory on boot

commit 4c24aff2a6c7f8c8ab846593f203306f6774a918
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Tue May 5 11:55:59 2020 -0600

    remove unused nginx PAM module, and comment setting up initial crt symlinks

commit 04b12ceeb97d9b906b89f3bc948823d396acf376
Author: SG <13872653+mmguero@users.noreply.github.com>
Date:   Mon May 4 14:32:16 2020 -0600

    for idaholab/Malcolm#128, provide directory to put CA certificates for trusted LDAP servers

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -15,6 +15,13 @@ x-auth-variables: &auth-variables
   # When NGINX_LDAP_TLS_STUNNEL=true, which protocol to use when initiating the
   # "extendedReq(1) LDAP_START_TLS_OID" command: winldap or openldap
   NGINX_LDAP_TLS_STUNNEL_PROTOCOL : 'winldap'
+  # stunnel will require and verify certificates for StartTLS when one or more
+  # trusted CA certificate files are placed in the ./nginx/ca-trust directory.
+  # For additional security, hostname or IP address checking of the associated
+  # CA certificate(s) can be enabled by providing these values.
+  NGINX_LDAP_TLS_STUNNEL_CHECK_HOST : ''
+  NGINX_LDAP_TLS_STUNNEL_CHECK_IP : ''
+  NGINX_LDAP_TLS_STUNNEL_VERIFY_LEVEL : 2
 
 x-nginx-variables: &nginx-variables
   # Whether or not to write nginx's access.log and error.log to Elasticsearch
@@ -127,7 +134,7 @@ services:
       retries: 3
       start_period: 180s
   kibana:
-    image: malcolmnetsec/kibana-oss:2.0.2
+    image: malcolmnetsec/kibana-oss:2.0.3
     restart: "no"
     hostname: kibana
     environment:
@@ -150,7 +157,7 @@ services:
       retries: 3
       start_period: 210s
   elastalert:
-    image: malcolmnetsec/elastalert:2.0.2
+    image: malcolmnetsec/elastalert:2.0.3
     restart: "no"
     hostname: elastalert
     environment:
@@ -175,7 +182,7 @@ services:
       retries: 3
       start_period: 210s
   curator:
-    image: malcolmnetsec/curator:2.0.2
+    image: malcolmnetsec/curator:2.0.3
     restart: "no"
     hostname: curator
     environment:
@@ -191,7 +198,7 @@ services:
       retries: 3
       start_period: 30s
   logstash:
-    image: malcolmnetsec/logstash-oss:2.0.2
+    image: malcolmnetsec/logstash-oss:2.0.3
     restart: "no"
     hostname: logstash
     environment:
@@ -221,7 +228,7 @@ services:
       retries: 3
       start_period: 600s
   filebeat:
-    image: malcolmnetsec/filebeat-oss:2.0.2
+    image: malcolmnetsec/filebeat-oss:2.0.3
     restart: "no"
     hostname: filebeat
     environment:
@@ -255,7 +262,7 @@ services:
       retries: 3
       start_period: 60s
   moloch:
-    image: malcolmnetsec/moloch:2.0.2
+    image: malcolmnetsec/moloch:2.0.3
     restart: "no"
     hostname: moloch
     env_file:
@@ -291,7 +298,7 @@ services:
       retries: 3
       start_period: 210s
   zeek:
-    image: malcolmnetsec/zeek:2.0.2
+    image: malcolmnetsec/zeek:2.0.3
     restart: "no"
     hostname: zeek
     environment:
@@ -314,7 +321,7 @@ services:
       retries: 3
       start_period: 60s
   file-monitor:
-    image: malcolmnetsec/file-monitor:2.0.2
+    image: malcolmnetsec/file-monitor:2.0.3
     restart: "no"
     hostname: filemon
     environment:
@@ -331,7 +338,7 @@ services:
       retries: 3
       start_period: 60s
   pcap-capture:
-    image: malcolmnetsec/pcap-capture:2.0.2
+    image: malcolmnetsec/pcap-capture:2.0.3
     restart: "no"
     network_mode: host
     ulimits:
@@ -354,7 +361,7 @@ services:
       retries: 3
       start_period: 60s
   pcap-monitor:
-    image: malcolmnetsec/pcap-monitor:2.0.2
+    image: malcolmnetsec/pcap-monitor:2.0.3
     restart: "no"
     hostname: pcapmon
     environment:
@@ -374,7 +381,7 @@ services:
       retries: 3
       start_period: 90s
   upload:
-    image: malcolmnetsec/file-upload:2.0.2
+    image: malcolmnetsec/file-upload:2.0.3
     restart: "no"
     hostname: upload
     env_file:
@@ -397,7 +404,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:2.0.2
+    image: malcolmnetsec/htadmin:2.0.3
     restart: "no"
     hostname: htadmin
     environment:
@@ -416,7 +423,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:2.0.2
+    image: malcolmnetsec/freq:2.0.3
     restart: "no"
     hostname: freq
     environment:
@@ -431,7 +438,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:2.0.2
+    image: malcolmnetsec/name-map-ui:2.0.3
     restart: "no"
     hostname: name-map-ui
     environment:
@@ -449,7 +456,7 @@ services:
       retries: 3
       start_period: 60s
   nginx-proxy:
-    image: malcolmnetsec/nginx-proxy:2.0.2
+    image: malcolmnetsec/nginx-proxy:2.0.3
     restart: "no"
     hostname: nginx-proxy
     environment:
@@ -473,6 +480,7 @@ services:
       - nginx-log-path:/var/log/nginx:rw
       - ./nginx/nginx_ldap.conf:/etc/nginx/nginx_ldap.conf:ro
       - ./nginx/htpasswd:/etc/nginx/.htpasswd:ro
+      - ./nginx/ca-trust:/etc/nginx/ca-trust:ro
       - ./nginx/certs:/etc/nginx/certs:ro
       - ./nginx/certs/dhparam.pem:/etc/nginx/dhparam/dhparam.pem:ro
     healthcheck:
