--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,13 @@ x-auth-variables: &auth-variables
   # When NGINX_LDAP_TLS_STUNNEL=true, which protocol to use when initiating the
   # "extendedReq(1) LDAP_START_TLS_OID" command: winldap or openldap
   NGINX_LDAP_TLS_STUNNEL_PROTOCOL : 'winldap'
+  # stunnel will require and verify certificates for StartTLS when one or more
+  # trusted CA certificate files are placed in the ./nginx/ca-trust directory.
+  # For additional security, hostname or IP address checking of the associated
+  # CA certificate(s) can be enabled by providing these values.
+  NGINX_LDAP_TLS_STUNNEL_CHECK_HOST : ''
+  NGINX_LDAP_TLS_STUNNEL_CHECK_IP : ''
+  NGINX_LDAP_TLS_STUNNEL_VERIFY_LEVEL : 2
 
 x-nginx-variables: &nginx-variables
   # Whether or not to write nginx's access.log and error.log to Elasticsearch
@@ -130,7 +137,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/kibana.Dockerfile
-    image: malcolmnetsec/kibana-oss:2.0.2
+    image: malcolmnetsec/kibana-oss:2.0.3
     restart: "no"
     hostname: kibana
     environment:
@@ -156,7 +163,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/elastalert.Dockerfile
-    image: malcolmnetsec/elastalert:2.0.2
+    image: malcolmnetsec/elastalert:2.0.3
     restart: "no"
     hostname: elastalert
     environment:
@@ -184,7 +191,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/curator.Dockerfile
-    image: malcolmnetsec/curator:2.0.2
+    image: malcolmnetsec/curator:2.0.3
     restart: "no"
     hostname: curator
     environment:
@@ -205,7 +212,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/logstash.Dockerfile
-    image: malcolmnetsec/logstash-oss:2.0.2
+    image: malcolmnetsec/logstash-oss:2.0.3
     restart: "no"
     hostname: logstash
     environment:
@@ -240,7 +247,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/filebeat.Dockerfile
-    image: malcolmnetsec/filebeat-oss:2.0.2
+    image: malcolmnetsec/filebeat-oss:2.0.3
     restart: "no"
     hostname: filebeat
     environment:
@@ -278,7 +285,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/moloch.Dockerfile
-    image: malcolmnetsec/moloch:2.0.2
+    image: malcolmnetsec/moloch:2.0.3
     restart: "no"
     hostname: moloch
     env_file:
@@ -320,7 +327,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/zeek.Dockerfile
-    image: malcolmnetsec/zeek:2.0.2
+    image: malcolmnetsec/zeek:2.0.3
     restart: "no"
     hostname: zeek
     environment:
@@ -347,7 +354,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-monitor.Dockerfile
-    image: malcolmnetsec/file-monitor:2.0.2
+    image: malcolmnetsec/file-monitor:2.0.3
     restart: "no"
     hostname: filemon
     environment:
@@ -367,7 +374,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-capture.Dockerfile
-    image: malcolmnetsec/pcap-capture:2.0.2
+    image: malcolmnetsec/pcap-capture:2.0.3
     restart: "no"
     network_mode: host
     ulimits:
@@ -393,7 +400,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-monitor.Dockerfile
-    image: malcolmnetsec/pcap-monitor:2.0.2
+    image: malcolmnetsec/pcap-monitor:2.0.3
     restart: "no"
     hostname: pcapmon
     environment:
@@ -416,7 +423,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-upload.Dockerfile
-    image: malcolmnetsec/file-upload:2.0.2
+    image: malcolmnetsec/file-upload:2.0.3
     restart: "no"
     hostname: upload
     env_file:
@@ -439,7 +446,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:2.0.2
+    image: malcolmnetsec/htadmin:2.0.3
     build:
       context: .
       dockerfile: Dockerfiles/htadmin.Dockerfile
@@ -461,7 +468,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:2.0.2
+    image: malcolmnetsec/freq:2.0.3
     build:
       context: .
       dockerfile: Dockerfiles/freq.Dockerfile
@@ -479,7 +486,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:2.0.2
+    image: malcolmnetsec/name-map-ui:2.0.3
     build:
       context: .
       dockerfile: Dockerfiles/name-map-ui.Dockerfile
@@ -503,7 +510,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/nginx.Dockerfile
-    image: malcolmnetsec/nginx-proxy:2.0.2
+    image: malcolmnetsec/nginx-proxy:2.0.3
     restart: "no"
     hostname: nginx-proxy
     environment:
@@ -528,6 +535,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/nginx_ldap.conf:/etc/nginx/nginx_ldap.conf:ro
       - ./nginx/htpasswd:/etc/nginx/.htpasswd:ro
+      - ./nginx/ca-trust:/etc/nginx/ca-trust:ro
       - ./nginx/certs:/etc/nginx/certs:ro
       - ./nginx/certs/dhparam.pem:/etc/nginx/dhparam/dhparam.pem:ro
     healthcheck:
