updated elasticsearch version, working on ecs fields

--- a/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
+++ b/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
@@ -27,6 +27,11 @@ filter {
         init => "require 'time'"
         code => "event.set('[event][ingested]', Time.now.to_f)"
       }
+      date {
+        id => "date_event_ingested_conv"
+        match => [ "[event][ingested]", "UNIX" ]
+        target => "[event][ingested]"
+      }
     }
 
     # event.provider
