--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -103,7 +103,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.6.2
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.7.0
     restart: "no"
     hostname: elasticsearch
     environment:
@@ -115,6 +115,7 @@ services:
       # cluster.initial_master_nodes : 'elasticsearch'
       cluster.routing.allocation.disk.threshold_enabled : 'false'
       cluster.routing.allocation.node_initial_primaries_recoveries : 8
+      indices.query.bool.max_clause_count : 2048
       path.repo : '/opt/elasticsearch/backup'
     expose:
       - 9200
