--- a/logstash/pipelines/zeek/20_zeek_to_ecs.conf
+++ b/logstash/pipelines/zeek/20_zeek_to_ecs.conf
@@ -65,7 +65,7 @@ filter {
           if ([zeek_conn][orig_ip_bytes]) {       mutate { id => "mutate_add_field_ecs_client_bytes_conn_orig_ip_bytes"
                                                            add_field => { "[client][bytes]" => "%{[zeek_conn][orig_ip_bytes]}" } } }
     else if ([zeek_conn][orig_bytes]) {           mutate { id => "mutate_add_field_ecs_client_bytes_conn_orig_bytes"
-                                                           add_field => { "[client][bytes]" => "%{[zeek_connzeek_conn][orig_bytes]}" } } }
+                                                           add_field => { "[client][bytes]" => "%{[zeek_conn][orig_bytes]}" } } }
     else if ([zeek_http][request_body_len]) {     mutate { id => "mutate_add_field_ecs_client_bytes_http_request_body_len"
                                                            add_field => { "[client][bytes]" => "%{[zeek_http][request_body_len]}" } } }
     else if ([zeek_mqtt_publish][payload_len]) {  mutate { id => "mutate_add_field_ecs_client_bytes_mqtt_publish_payload_len"
@@ -103,7 +103,7 @@ filter {
           if ([zeek_conn][resp_ip_bytes]) {       mutate { id => "mutate_add_field_ecs_server_bytes_conn_resp_ip_bytes"
                                                            add_field => { "[server][bytes]" => "%{[zeek_conn][resp_ip_bytes]}" } } }
     else if ([zeek_conn][resp_bytes]) {           mutate { id => "mutate_add_field_ecs_server_bytes_conn_resp_bytes"
-                                                           add_field => { "[server][bytes]" => "%{[zeek_connzeek_conn][resp_bytes]}" } } }
+                                                           add_field => { "[server][bytes]" => "%{[zeek_conn][resp_bytes]}" } } }
     else if ([zeek_http][response_body_len]) {    mutate { id => "mutate_add_field_ecs_server_bytes_http_response_body_len"
                                                            add_field => { "[server][bytes]" => "%{[zeek_http][response_body_len]}" } } }
     else if ([zeek_sip][response_body_len]) {     mutate { id => "mutate_add_field_ecs_server_bytes_sip_response_body_len"
@@ -154,7 +154,67 @@ filter {
     # https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-outcome.html
 
     # ☐ DNS - Fields describing DNS queries and answers. - https://www.elastic.co/guide/en/ecs/current/ecs-dns.html
-    # ☐ Error - Fields about errors of any kind. - https://www.elastic.co/guide/en/ecs/current/ecs-error.html
+    if ([zeek_dns]) {
+
+      # dns.resolved_ip
+      if ([dns][ip]) {                            mutate { id => "mutate_merge_ecs_dhs_resolved_ip"
+                                                           merge => { "[dns][resolved_ip]" => "[dns][ip]" } } }
+
+      # dns.answers and dns.type:answer
+      if ([zeek_dns][answers]) {
+        ruby {
+          id => "ruby_zeek_dns_answers_to_ecs"
+          code => '
+            event.set("[dns][answers]", [Array(event.get("[zeek_dns][answers]")), Array(event.get("[zeek_dns][TTLs]"))].transpose.map{ |d| Hash[[:data, :ttl].zip(d)] })
+        '}
+        mutate { id => "mutate_add_field_ecs_dns_type_answer"
+                 add_field => { "[dns][type]" => "answer" } }
+      }
+
+      # dns.op_code
+      if ([dns][opcode]) {                          mutate { id => "mutate_add_field_ecs_dns_opcode"
+                                                             add_field => { "[dns][op_code]" => "%{[dns][op_code]}" } } }
+
+      # dns.question.class
+      if ([zeek_dns][qclass_name]) {                mutate { id => "mutate_add_field_ecs_dns_qclass"
+                                                             add_field => { "[dns][question][class]" => "%{[zeek_dns][qclass_name]}" } } }
+
+      # dns.question.type
+      if ([zeek_dns][qtype_name]) {                 mutate { id => "mutate_add_field_ecs_dns_qtype"
+                                                             add_field => { "[dns][question][type]" => "%{[zeek_dns][qtype_name]}" } } }
+
+      # dns.question.name and dns.type:query
+      if ([zeek_dns][query]) {
+                            mutate { id => "mutate_add_field_ecs_dns_query"
+                                     add_field => { "[dns][question][name]" => "%{[zeek_dns][query]}" } }
+        if (![dns][type]) { mutate { id => "mutate_add_field_ecs_dns_type_query"
+                                     add_field => { "[dns][type]" => "query" } } }
+      }
+
+      if ([dns][type]) {
+        # dns.header_flags
+        if ([zeek][AA] == "T") {                    mutate { id => "mutate_add_field_ecs_dns_header_flag_aa"
+                                                             add_field => { "[dns][header_flags]" => "AA" } } }
+        if ([zeek][TC] == "T") {                    mutate { id => "mutate_add_field_ecs_dns_header_flag_tc"
+                                                             add_field => { "[dns][header_flags]" => "TC" } } }
+        if ([zeek][RD] == "T") {                    mutate { id => "mutate_add_field_ecs_dns_header_flag_rd"
+                                                             add_field => { "[dns][header_flags]" => "RD" } } }
+        if ([zeek][RA] == "T") {                    mutate { id => "mutate_add_field_ecs_dns_header_flag_ra"
+                                                             add_field => { "[dns][header_flags]" => "RA" } } }
+      }
+
+      # dns.response_code
+      if ([zeek_dns][rcode_name]) {                 mutate { id => "mutate_add_field_ecs_dns_response_code"
+                                                             add_field => { "[dns][response_code]" => "%{[zeek_dns][rcode_name]}" } } }
+
+      # dns.id
+      if ([zeek_dns][trans_id]) {                   mutate { id => "mutate_add_field_ecs_dns_id"
+                                                             add_field => { "[dns][id]" => "%{[zeek_dns][trans_id]}" } } }
+
+      # TODO: domain stuff (dns.question.registered_domain, dns.question.subdomain, dns.question.top_level_domain)
+      # perhaps use something like https://github.com/plutonbacon/logstash-filter-publicsuffix
+    }
+
     # ☐ File - Fields describing files. - https://www.elastic.co/guide/en/ecs/current/ecs-file.html
     # ☐ Hash - Hashes, usually file hashes. - https://www.elastic.co/guide/en/ecs/current/ecs-hash.html
     # ☐ HTTP - Fields describing an HTTP request. - https://www.elastic.co/guide/en/ecs/current/ecs-http.html
@@ -181,6 +241,9 @@ filter {
     # ☐ Destination - Fields about the destination side of a network connection, used with source. - https://www.elastic.co/guide/en/ecs/current/ecs-destination.html
     # ☐ Source - Fields about the source side of a network connection, used with destination. - https://www.elastic.co/guide/en/ecs/current/ecs-source.html
     #   - I have client/destination, do I need to do anything with this as well?
+    # ☐ Error - Fields about errors of any kind. - https://www.elastic.co/guide/en/ecs/current/ecs-error.html
+    #   - There could be a lot of cases where there are errors, do we lump them all in here? we'd need to idenfity
+    #     instances of error, error_msg, reply, status code, etc...
 
     # 🗷 Base - All fields defined directly at the top level - https://www.elastic.co/guide/en/ecs/current/ecs-base.html
     # 🗷 Cloud - Fields about the cloud resource. - https://www.elastic.co/guide/en/ecs/current/ecs-cloud.html
