more work on ecs normalization

--- a/logstash/pipelines/zeek/20_zeek_to_ecs.conf
+++ b/logstash/pipelines/zeek/20_zeek_to_ecs.conf
@@ -173,7 +173,7 @@ filter {
 
       # dns.op_code
       if ([dns][opcode]) {                          mutate { id => "mutate_add_field_ecs_dns_opcode"
-                                                             add_field => { "[dns][op_code]" => "%{[dns][op_code]}" } } }
+                                                             add_field => { "[dns][op_code]" => "%{[dns][opcode]}" } } }
 
       # dns.question.class
       if ([zeek_dns][qclass_name]) {                mutate { id => "mutate_add_field_ecs_dns_qclass"
@@ -215,8 +215,98 @@ filter {
       # perhaps use something like https://github.com/plutonbacon/logstash-filter-publicsuffix
     }
 
-    # ☐ File - Fields describing files. - https://www.elastic.co/guide/en/ecs/current/ecs-file.html
-    # ☐ Hash - Hashes, usually file hashes. - https://www.elastic.co/guide/en/ecs/current/ecs-hash.html
+    # 🗹 File - Fields describing files. - https://www.elastic.co/guide/en/ecs/current/ecs-file.html
+
+    if ([zeek_files]) {
+
+      # file.type
+      mutate { id => "mutate_add_field_ecs_file_type"
+               add_field => { "[file][type]" => "file" } }
+
+      # file.directory, file.name, file.path
+      if ([zeek_files][filename]) {
+        mutate { id => "mutate_add_field_ecs_file_path"
+                 add_field => { "[file][path]" => "%{[zeek_files][filename]}" } }
+        grok {
+          id => "grok_zeek_files_filename_ecs"
+          match => { "[zeek_files][filename]" => [ "%{GREEDYDATA:[file][directory]}[\\\/]%{DATA:[file][name]}" ] }
+        }
+      }
+
+      # file.mime_type
+      if ([zeek_files][mime_type]) {                mutate { id => "mutate_add_field_ecs_files_mime_type"
+                                                             add_field => { "[file][mime_type]" => "%{[zeek_files][mime_type]}" } } }
+
+      # file.size
+      if ([zeek_files][total_bytes]) {              mutate { id => "mutate_add_field_ecs_files_size"
+                                                             add_field => { "[file][size]" => "%{[zeek_files][total_bytes]}" } } }
+
+      # 🗹 Hash - Hashes, usually file hashes. - https://www.elastic.co/guide/en/ecs/current/ecs-hash.html
+      # file.hash.md5,sha1,sha256
+      if ([zeek_files][md5]) {                      mutate { id => "mutate_add_field_ecs_files_hash_md5"
+                                                             add_field => { "[file][hash][md5]" => "%{[zeek_files][md5]}" } } }
+      if ([zeek_files][sha1]) {                     mutate { id => "mutate_add_field_ecs_files_hash_sha1"
+                                                             add_field => { "[file][hash][sha1]" => "%{[zeek_files][sha1]}" } } }
+      if ([zeek_files][sha256]) {                   mutate { id => "mutate_add_field_ecs_files_hash_sha256"
+                                                             add_field => { "[file][hash][sha256]" => "%{[zeek_files][sha256]}" } } }
+    }
+
+    if ([zeek_smb_files]) {
+
+      # from smb_files, file.created,accessed,ctime,mtime,size
+      if ([zeek_smb_files][times_created]) {        mutate { id => "mutate_add_field_ecs_smb_created"
+                                                             add_field => { "[file][created]" => "%{[zeek_smb_files][times_created]}" } } }
+
+      if ([zeek_smb_files][times_accessed]) {       mutate { id => "mutate_add_field_ecs_smb_accessed"
+                                                             add_field => { "[file][accessed]" => "%{[zeek_smb_files][times_accessed]}" } } }
+
+      if ([zeek_smb_files][times_changed]) {        mutate { id => "mutate_add_field_ecs_smb_changed"
+                                                             add_field => { "[file][ctime]" => "%{[zeek_smb_files][times_changed]}" } } }
+
+      if ([zeek_smb_files][times_modified]) {       mutate { id => "mutate_add_field_ecs_smb_modified"
+                                                             add_field => { "[file][mtime]" => "%{[zeek_smb_files][times_modified]}" } } }
+
+      if ([zeek_smb_files][size]) {                 mutate { id => "mutate_add_field_ecs_smb_size"
+                                                             add_field => { "[file][size]" => "%{[zeek_smb_files][size]}" } } }
+
+      # file.name from smb_files.name
+      if (![file][name]) and ([zeek_smb_files][name]) {
+        mutate { id => "mutate_add_field_ecs_file_smb_files_name"
+                 add_field => { "[file][name]" => "%{[zeek_smb_files][name]}" } }
+      }
+    }
+
+    # file.directory from zeek_smb_files.smb_path
+    if ([@metadata][smb_path]) {
+      if (![file][type]) { mutate { id => "mutate_add_field_ecs_file_type_smb_path"
+                                    add_field => { "[file][type]" => "file" } } }
+
+      mutate { id => "mutate_add_field_ecs_file_directory_from_smb"
+               add_field => { "[file][directory]" => "%{[@metadata][smb_path]}" } }
+    }
+
+    # file.path from file.directory and file.name, if present and not already populated
+    if ([file][directory]) and (![file][path]) {
+      if ([file][name]) {
+        mutate { id => "mutate_add_field_ecs_path_from_dir_and_name"
+                 add_field => { "[file][path]" => "%{[file][directory]}/%{[file][name]}" } }
+      } else {
+        mutate { id => "mutate_add_field_ecs_path_from_dir_only"
+                 add_field => { "[file][path]" => "%{[file][directory]}" } }
+      }
+    }
+
+    if ([file][name]) {
+      if (![file][type]) { mutate { id => "mutate_add_field_ecs_file_type_name"
+                                    add_field => { "[file][type]" => "file" } } }
+
+      # file.extension
+      grok {
+        id => "grok_zeek_files_fileext_ecs"
+        match => { "[file][name]" => [ "%{GREEDYDATA}\.%{DATA:[file][extension]}" ] }
+      }
+    }
+
     # ☐ HTTP - Fields describing an HTTP request. - https://www.elastic.co/guide/en/ecs/current/ecs-http.html
     # ☐ Network - Fields describing the communication path over which the event happened. - https://www.elastic.co/guide/en/ecs/current/ecs-network.html
     # ☐ Operating System - OS fields contain information about the operating system. - https://www.elastic.co/guide/en/ecs/current/ecs-os.html
