more work on getting zeek finalized for spicy plugin

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -775,14 +775,24 @@ filter {
     if ([@metadata][zeek_fields_bitmap] and [@metadata][zeek_fields_bitmap_version]) {
 
       # bitmap http.log field configuration version 0
-      # all fields:   0x3FFFFFFF / 1073741823
-      # minus origin: 0x3FFFDFFF / 1073733631
+      # all fields:                                       0x7FFFFFFFF / 34359738367
+      # minus fields added by zeek-sniffpass:             0x03FFFFFFF /  1073741823
+      # minus origin and fields added by zeek-sniffpass:  0x03FFFDFFF /  1073733631
 
       if ([@metadata][zeek_fields_bitmap_version] == 0) {
 
-        if ([@metadata][zeek_fields_bitmap] == 1073741823) {
+        if ([@metadata][zeek_fields_bitmap] == 34359738367) {
           dissect {
             id => "dissect_zeek_http_0_with_all_fields"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][trans_depth]}	%{[zeek_cols][method]}	%{[zeek_cols][host]}	%{[zeek_cols][uri]}	%{[zeek_cols][referrer]}	%{[zeek_cols][version]}	%{[zeek_cols][user_agent]}	%{[zeek_cols][origin]}	%{[zeek_cols][request_body_len]}	%{[zeek_cols][response_body_len]}	%{[zeek_cols][status_code]}	%{[zeek_cols][status_msg]}	%{[zeek_cols][info_code]}	%{[zeek_cols][info_msg]}	%{[zeek_cols][tags]}	%{[zeek_cols][user]}	%{[zeek_cols][password]}	%{[zeek_cols][proxied]}	%{[zeek_cols][orig_fuids]}	%{[zeek_cols][orig_filenames]}	%{[zeek_cols][orig_mime_types]}	%{[zeek_cols][resp_fuids]}	%{[zeek_cols][resp_filenames]}	%{[zeek_cols][resp_mime_types]}	%{[zeek_cols][post_username]}	%{[zeek_cols][post_password_plain]}	%{[zeek_cols][post_password_md5]}	%{[zeek_cols][post_password_sha1]}	%{[zeek_cols][post_password_sha256]}"
+            }
+          }
+
+        } else if ([@metadata][zeek_fields_bitmap] == 1073741823) {
+          dissect {
+            id => "dissect_zeek_http_0_with_all_fields_minus_sniffpass"
             # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
             mapping => {
               "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][trans_depth]}	%{[zeek_cols][method]}	%{[zeek_cols][host]}	%{[zeek_cols][uri]}	%{[zeek_cols][referrer]}	%{[zeek_cols][version]}	%{[zeek_cols][user_agent]}	%{[zeek_cols][origin]}	%{[zeek_cols][request_body_len]}	%{[zeek_cols][response_body_len]}	%{[zeek_cols][status_code]}	%{[zeek_cols][status_msg]}	%{[zeek_cols][info_code]}	%{[zeek_cols][info_msg]}	%{[zeek_cols][tags]}	%{[zeek_cols][user]}	%{[zeek_cols][password]}	%{[zeek_cols][proxied]}	%{[zeek_cols][orig_fuids]}	%{[zeek_cols][orig_filenames]}	%{[zeek_cols][orig_mime_types]}	%{[zeek_cols][resp_fuids]}	%{[zeek_cols][resp_filenames]}	%{[zeek_cols][resp_mime_types]}"
@@ -824,7 +834,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_http"
-        init => "$zeek_http_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'trans_depth', 'method', 'host', 'uri', 'referrer', 'version', 'user_agent', 'origin', 'request_body_len', 'response_body_len', 'status_code', 'status_msg', 'info_code', 'info_msg', 'tags', 'user', 'password', 'proxied', 'orig_fuids', 'orig_filenames', 'orig_mime_types', 'resp_fuids', 'resp_filenames', 'resp_mime_types' ]"
+        init => "$zeek_http_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'trans_depth', 'method', 'host', 'uri', 'referrer', 'version', 'user_agent', 'origin', 'request_body_len', 'response_body_len', 'status_code', 'status_msg', 'info_code', 'info_msg', 'tags', 'user', 'password', 'proxied', 'orig_fuids', 'orig_filenames', 'orig_mime_types', 'resp_fuids', 'resp_filenames', 'resp_mime_types', 'post_username', 'post_password_plain', 'post_password_md5', 'post_password_sha1', 'post_password_sha256' ]"
         code => "event.set('[zeek_cols]', $zeek_http_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -2803,9 +2813,6 @@ filter {
     #############################################################################################################################
     # files.log specific logic
 
-    if ([zeek_files][parent_fuid]) { mutate { id => "mutate_split_zeek_files_parent_fuid"
-                                              split => { "[zeek_files][parent_fuid]" => "," } } }
-
     if ([zeek_files][total_bytes]) {
       ruby {
         id => "ruby_zeek_files_totBytes"
@@ -2819,8 +2826,24 @@ filter {
       }
     }
 
-    mutate { id => "mutate_split_zeek_files_analyzers"
-             split => { "[zeek_files][analyzers]" => "," } }
+    if ([zeek_files][parent_fuid]) { mutate { id => "mutate_split_zeek_files_parent_fuid"
+                                              split => { "[zeek_files][parent_fuid]" => "," } } }
+
+    if ([zeek_files][analyzers]) { mutate { id => "mutate_split_zeek_files_analyzers"
+                                            split => { "[zeek_files][analyzers]" => "," } } }
+
+    if ([zeek_files][source]) and ([zeek_files][source] =~ /^XOR decrypted from /) {
+      # PE_XOR plugin writes source as "XOR decrypted from FM7Tr545kxt3ofR7x2-"..., let's
+      # standardize that to just "XOR decrypted" and put the source fuid in parent_fuid
+      grok {
+        id => "grok_zeek_files_source_xor"
+        match => { "[zeek_files][source]" => [ "decrypted%{SPACE}from%{SPACE}%{WORD:[@metadata][source_xor_fuid]}" ] }
+      }
+      if ([@metadata][source_xor_fuid]) { mutate { id => "mutate_merge_zeek_files_source_xor_parent_fuid"
+                                                   merge => { "[zeek_files][parent_fuid]" => "[@metadata][source_xor_fuid]" } } }
+      mutate { id => "mutate_replace_zeek_files_source_xor"
+               replace => { "[zeek_files][source]" => "XOR decrypted" } }
+    }
 
   } else if ([source] == "ftp") {
     #############################################################################################################################
@@ -2952,6 +2975,17 @@ filter {
                add_field => { "[http][methodCnt]" => "1" } }
     }
 
+    if ([zeek_http][post_username]) {
+      mutate { id => "mutate_merge_zeek_http_post_username_1"
+               merge => { "[zeek][user]" => "[zeek_http][post_username]" } }
+      mutate { id => "mutate_merge_zeek_http_post_username_2"
+               merge => { "[user]" => "[zeek_http][post_username]" } }
+    }
+    if (![zeek][password]) and ([zeek_http][post_password_plain]) {
+      mutate { id => "mutate_add_field_zeek_http_post_password_plain"
+               add_field =>  { "[zeek][password]" => "%{[zeek_http][post_password_plain]}" } }
+    }
+
     ruby {
       id => "ruby_zeek_http_totDataBytes"
       code => "event.set('[totDataBytes]', event.get('[zeek_http][response_body_len]').to_i + event.get('[zeek_http][request_body_len]').to_i)"
@@ -2968,8 +3002,10 @@ filter {
       mutate { id => "mutate_add_field_irc_nickCnt"
                add_field => { "[irc][nickCnt]" => "1" } }
       # store "nick" alongside "user"
-      mutate { id => "mutate_merge_irc_nick_user"
+      mutate { id => "mutate_merge_irc_nick_user_1"
                merge => { "[zeek][user]" => "[zeek_irc][nick]" } }
+      mutate { id => "mutate_merge_irc_nick_user_2"
+               merge => { "[user]" => "[zeek_irc][nick]" } }
     }
 
     if ([zeek_irc][command]) and ([zeek_irc][value]) and (([zeek_irc][command] == "JOIN") or ([zeek_irc][command] == "PART")) {
@@ -3108,6 +3144,21 @@ filter {
         if ([dstIp]) { mutate { id => "mutate_add_field_zeek_resp_h_attack"
                                 add_field => { "[zeek][resp_h]"   => "%{[dstIp]}" } } }
       }
+    }
+
+    if ([zeek_notice][note] == "Corelight::XOR_Encrypted_PE_File_Seen") and ([zeek_notice][sub] =~ /Decrypted File ID/) {
+      # zeek_notice.note  Corelight::XOR_Encrypted_PE_File_Seen
+      #
+      #         zeek.fuid   F7QoY740DvrZF2lrsa
+      # + zeek_notice.sub   Decrypted File ID: FqNQ8i3LbG2ZY5EO3k
+      # -----------------
+      # =       zeek.fuid   F7QoY740DvrZF2lrsa, FqNQ8i3LbG2ZY5EO3k
+      grok {
+        id => "grok_zeek_notice_xor_fuid"
+        match => { "[zeek_notice][sub]" => [ "Decrypted%{SPACE}File%{SPACE}ID:%{SPACE}%{WORD:[@metadata][decrypted_xor_fuid]}" ] }
+      }
+      if ([@metadata][decrypted_xor_fuid]) { mutate { id => "mutate_merge_zeek_notice_decrypted_xor_fuid"
+                                                      merge => { "[zeek][fuid]" => "[@metadata][decrypted_xor_fuid]" } } }
     }
 
   } else if ([source] == "ntp") {
