--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -152,14 +152,41 @@ filter {
     }
   }
 
-  if ([zeek_smb_files][action])                 { mutate { id => "mutate_merge_normalize_zeek_smb_files_action"
-                                                           merge => { "[zeek][action]" => "[zeek_smb_files][action]" } } }
+  if ([zeek_smb_files][action])   { mutate { id => "mutate_merge_normalize_zeek_smb_files_action"
+                                             merge => { "[zeek][action]" => "[zeek_smb_files][action]" } } }
 
-  if ([zeek_sip][method])                       { mutate { id => "mutate_merge_normalize_zeek_sip_method"
-                                                           merge => { "[zeek][action]" => "[zeek_sip][method]" } } }
+  if ([zeek_sip][method])         { mutate { id => "mutate_merge_normalize_zeek_sip_method"
+                                             merge => { "[zeek][action]" => "[zeek_sip][method]" } } }
 
-  if ([zeek_tds][command])                      { mutate { id => "mutate_merge_normalize_zeek_tds_command"
-                                                           merge => { "[zeek][action]" => "[zeek_tds][command]" } } }
+  if ([zeek_snmp]) {
+    if ([zeek_snmp][get_bulk_requests]) and ([zeek_snmp][get_bulk_requests] != "0") {
+      mutate { id => "mutate_add_field_zeek_snmp_get_bulk_requests_action"
+               add_field => { "[@metadata][snmp_get_bulk_requests_action]" => "GetBulkRequest" } }
+      mutate { id => "mutate_merge_zeek_snmp_action_get_bulk_requests"
+               merge => { "[zeek][action]" => "[@metadata][snmp_get_bulk_requests_action]" } }
+    }
+    if ([zeek_snmp][get_requests]) and ([zeek_snmp][get_requests] != "0") {
+      mutate { id => "mutate_add_field_zeek_snmp_get_requests_action"
+               add_field => { "[@metadata][snmp_get_requests_action]" => "GetRequest" } }
+      mutate { id => "mutate_merge_zeek_snmp_action_get_requests"
+               merge => { "[zeek][action]" => "[@metadata][snmp_get_requests_action]" } }
+    }
+    if ([zeek_snmp][get_responses]) and ([zeek_snmp][get_responses] != "0") {
+      mutate { id => "mutate_add_field_zeek_snmp_get_responses_action"
+               add_field => { "[@metadata][snmp_get_responses_action]" => "GetResponse" } }
+      mutate { id => "mutate_merge_zeek_snmp_action_get_responses"
+               merge => { "[zeek][action]" => "[@metadata][snmp_get_responses_action]" } }
+    }
+    if ([zeek_snmp][set_requests]) and ([zeek_snmp][set_requests] != "0") {
+      mutate { id => "mutate_add_field_zeek_snmp_set_requests_action"
+               add_field => { "[@metadata][snmp_set_requests_action]" => "SetRequest" } }
+      mutate { id => "mutate_merge_zeek_snmp_action_set_requests"
+               merge => { "[zeek][action]" => "[@metadata][snmp_set_requests_action]" } }
+    }
+  }
+
+  if ([zeek_tds][command]) { mutate { id => "mutate_merge_normalize_zeek_tds_command"
+                             merge => { "[zeek][action]" => "[zeek_tds][command]" } } }
 
   if ([zeek_tds_rpc][procedure_name]) {
 
@@ -174,9 +201,8 @@ filter {
              merge => { "[zeek][action]" => "[@metadata][zeek_tds_rpc_procedure_name_tmp]" } }
   }
 
-
-  if ([zeek_tunnel][action])                    { mutate { id => "mutate_merge_normalize_zeek_tunnel_action"
-                                                           merge => { "[zeek][action]" => "[zeek_tunnel][action]" } } }
+  if ([zeek_tunnel][action])  { mutate { id => "mutate_merge_normalize_zeek_tunnel_action"
+                                         merge => { "[zeek][action]" => "[zeek_tunnel][action]" } } }
 
   if ([zeek][action]) {
     ruby {
