--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -4,9 +4,10 @@ filter {
   mutate {
     id => "mutate_convert_zeek_bulk"
     convert => {
+      "[zeek_conn][duration]" => "float"
       "[zeek_dce_rpc][rtt]" => "float"
+      "[zeek_dhcp][duration]" => "float"
       "[zeek_dns][rtt]" => "float"
-      "[zeek_ldap][message_id]" => "integer"
       "[zeek_ldap][result_code]" => "integer"
       "[zeek_modbus_register][delta]" => "float"
       "[zeek_modbus_register][new_val]" => "integer"
@@ -15,8 +16,7 @@ filter {
       "[zeek_mqtt_publish][payload_len]" => "integer"
       "[zeek_mqtt_subscribe][granted_qos_level]" => "integer"
       "[zeek_mqtt_subscribe][qos_levels]" => "integer"
-      "[zeek_ntp][mode]" => "integer"
-      "[zeek_ntp][num_exts]" => "float"
+      "[zeek_ntp][num_exts]" => "integer"
       "[zeek_ntp][poll]" => "float"
       "[zeek_ntp][precision]" => "float"
       "[zeek_ntp][root_delay]" => "float"
